[project]
name = "clearinghouse"
version = "0.1.0"
description = "API Server for making and clearing Schwab transactions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.8",
    "msgspec>=0.19.0",
    "schwabdev>=2.5.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "ruff>=0.9.6",
]

[tool.ruff.lint]
# F401 - unused imports
ignore = ["F401"]
